--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("./background.jpg");
+    background-image: url("./background.jpeg");
     background-size: cover;
     background-position: center;
     color: #ffff;
