--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header img{
 }
 
 #educacao{
-    display: flex;
+    /*display: flex;*/
     flex-direction: column;
     align-items: center;
     padding: 20px;
